# doc-to-speech

./: MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
dts/: __init__.py  speaker.py  vibevoice_tts.py
dts/readers/: __init__.py  doc_reader.py  html_reader.py  markdown_reader.py  pdf_reader.py  text_reader.py
tests/: test_basic.py
